[project]
name = "projet-alla-planche"
version = "0.1.0"
description = "Dataset analysis for a school project."
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]
